--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
 streamlit
 langchain
-faiss-cpu 
-PyPDF2 
-wikipedia 
-tiktoken
-langchain_google_genai
-# langchain.text_splitter
-PyPDF2
-sentence_transformers
-dotenv
 langchain_community
+langchain_google_genai
+faiss-cpu
+pypdf
+sentence_transformers
+python-dotenv
+wikipedia
+tiktoken
